--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,5 @@
     "angular-scenario": "~1.3.0"
   },
   "appPath": "app",
-  "main": ["scripts/scripts.js", "styles/main.cs"]
+  "main": ["scripts/scripts.js", "styles/main.css"]
 }
